...

    val images = pagingFlow.collectAsLazyPagingItems()

    CatBreedsTheme() {
        CatBreedDetailCard(
            catBreed = CatBreedDetailState(
                name = "Abyssinian",
                origin = "Egypt",
                temperament = "Active, Energetic, Independent, Intelligent, Gentle",
                description = "The Abyssinian is easy to care for and active cat who is a great purr-owner!",
                lifeSpan = "14 - 15",
            ),
            images = images
...
